fixed font on mobiles

--- a/app/less/splash/layout.less
+++ b/app/less/splash/layout.less
@@ -31,7 +31,6 @@ header {
         display: flex;
         align-items: center;
         justify-content: center;
-        text-align: left;
         position: relative;
     }
     z-index: 10;
@@ -40,13 +39,14 @@ header {
     text-align: center;
     top: 50%;
     left: 50%;
+    width: 100%;
     .translate3d();
     text-shadow: 1px 2px 3px #313131;
     
     .logo-code {
-        font-size: 12rem;
-        font-weight: bold;
-        letter-spacing: -25px;
+    font-weight: bold;
+    font-size: 11rem;
+    letter-spacing: -1.5rem;
         .to-corner & {
             font-size: 7rem;
             letter-spacing: -1rem;
